# wanderways-api

./: .dockerignore  .env.template  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  WanderWaysDB.session.sql  docker-compose.yaml
initializer/: Cargo.toml
initializer/assets/: create_tables.sql  data.yaml  drop_tables.sql  gamemod.yaml  gamemod_map.yaml  gamemode.yaml  gamemode_map.yaml  geo_data.yaml  insert.sql  lang.yaml  map.yaml  map_data.yaml  map_geo_data.yaml  tag.yaml  tag_group.yaml  tag_map.yaml
initializer/src/: lib.rs  main.rs
migrations/2023-03-22-085235_generate_schema/: down.sql  up.sql
migrations/2023-03-22-091249_insert_base_data/: up.sql
sql/: create.sql  drop.sql  generate_init.sh
sql/database/: down.sql  up.sql
sql/inserts/: down.sql  up.sql
sql/privileges/: up.sql
sql/tables/: db_size.sql  down.sql  list.sql  tables_size.sql  up.sql
sql/views/: down.sql  test.sql  up.sql
src/: cors.rs  dal.rs  env_load.rs  main.rs  routes.rs  schema.rs  translation_parser.rs
src/bll/: average_awareness.rs  game_answer_list.rs  game_list.rs  map_geo_data.rs  map_list.rs  start_game.rs  tag_list.rs
src/bo/: average_awareness.rs  game.rs  game_metadata.rs  game_party.rs  geo_data.rs  map.rs  session_data.rs  start_game.rs  tag.rs
src/dal/: average_awareness.rs  establish_connection.rs  game_list.rs  game_party_answer.rs  map_geo_data.rs  map_list.rs  query.rs  start_game.rs  tag_list.rs
src/routes/: all_options.rs  average_awareness.rs  game_list.rs  get_map_geo_data.rs  guards.rs  map_list.rs  responders.rs  start_game.rs  (+1 more)
(+62 files in other folders)
