[package]
name = "wanderways-api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.130"
dotenvy = "0.15"
futures = "0.3.27"
tokio =  { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.7"
rocket_session = "0.3.0"
chrono = { version = "0.4.19", features = ["serde"] }
regex = "1.7.3"

[dependencies.rocket_db_pools]
version = "0.1.0-rc.3"
features = ["deadpool_postgres"]

[dependencies.rocket]
version="0.5.0-rc.2"
features=["json"]